	  a loop, it was not being broken.
	- Try to prevent sibling forwarding loops by NOT forwarding a
	  request to a sibling if we have a stale copy of the object.
	  Validation requests should only be sent to parents (or
	  direct).
	- Fixed ncsa_auth hash bugs when re-reading password file.
	- Changed clientHierarchical() so that by default SSL/CONNECT
	  requests do NOT go to neighbor caches.

Changes to squid-1.2.beta25 (September 21, 1998):

	- Fixed async IO bugs from adding filedescriptor arg to AIOCB
	  callbacks (Henrik Nordstrom).
	- Fixed store_swapout.c assertion.  We were freeing object data
	  past the swapout_done offset.  This probably happens (only?)
	  when an object changes from cachable to uncachable while
	  it is being swapped out.
	- Added MEM_CLIENT_SOCK_BUF type so we can change the size
	  of the buffers used for writing data to the client sockets.
	- Added configure check for libbind.a.  If found, it will be
	  used instead of libresolv.a.
	- Changed fwdStart() to always allow internally generated
	  requests, such as for peer digests.  These requests are
	  known to fwdStart() because the address arg is set to
	  'no_addr'.
	- Completed initial HTCP implementation.  It works, but is not
	  tested much.
	- Added counters for I/O syscalls.
	- Fixed httpMaybeRemovePublic.  With broken ICP neighbors
	  (netapp) Squid doesn't use private keys.  This caused us
	  to remove almost every object from the cache.
	- Added 'asndb' cachemgr stats to show AS Number tree.
	- Fixed AS Number byte-order bug for netmasks.
	- Fixed comm_incoming calling rate for high loads (Stewart
	  Forster).
	- Give always_direct higher precedence than never_direct
	  (Henrik Nordstrom).
	- Changed PORT ACL type to accept ranges.  Now you can easily
	   deny, for example, all priveleged ports except 80, 70, 21,
	   etc.
	- ARP ACL fixes for Linux (David Luyer).
	- Replaced various "EBIT" flags bitfileds with structures of
	  "int:1" members.